# rustdoc-mcp

./: Cargo.toml  README.md
src/: item_type.rs  main.rs  markdown.rs  search.rs  server.rs  text.rs
