[package]
name = "rustdoc-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
rmcp = { version = "0.2.0", features = ["server", "macros", "transport-io"] }
scraper = "0.24.0"
reqwest = { version = "0.12" }
htmd = "0.3.2"
anyhow = "1.0.100"
tempfile = "3.23.0"
clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
tracing = "0.1.41"
strum = "0.27"
strum_macros = "0.27"
termimad = "0.20"
urlencoding = "2.1.3"
